ajustando css por minha conta

--- a/tag-semantica/index.html
+++ b/tag-semantica/index.html
@@ -6,24 +6,35 @@
     <title>Portifólio Semântico</title>
     <style>
         strong{
-            color: rgb(60, 41, 143);
+            color: rgb(226, 107, 107);
         }
         h1 {
-    color: rgb(28, 173, 84);
+    color: rgb(13, 14, 13);
     /* Adicionar mais estilos conforme necessário */
 }
 p {
-    color: rgb(201, 38, 38);
+    color: rgb(14, 13, 13);
     /* Adicionar mais estilos conforme necessário */
 }
 button {
     background-color: ciano;
-    color: white;
+    color: rgb(55, 163, 64);
     border: none;
     /* Adicionar mais estilos conforme necessário */
 }
+
 img {
     /* Adicionar estilos para formatar a imagem */
+}
+
+main > a{
+    color: blue;
+    text-decoration: none;
+    text-align: center;
+
+}
+main > a:hover{
+    color: red;
 }
 /* Adicionar mais estilos conforme necessário */
     </style>
