--- a/Portifolio-HTML-e-CSS-aula_5/index.html
+++ b/Portifolio-HTML-e-CSS-aula_5/index.html
@@ -13,15 +13,21 @@
         <h1>
             Eleve seu negócio digital a outro nível 
             <strong>com um Front-end de qualidade!
-            </strong></h1>
-            <p>Olá! Sou Joana Santos, desenvolvedora 
+            </strong>
+        </h1>
+        <p>
+            Olá! Sou Joana Santos, desenvolvedora 
             Front-end com especialidade em <strong>React, HTML e
             CSS</strong>. Ajudo pequenos negócios e designers a 
             colocarem em prática boas ideias. Vamos 
-            conversar?</p>
-            <a href="https://instagram.com/rafaballerini">Instagram</a>
-            <a href="https://github.com/guilhermeonrails">GitHub</a>
-            <img src="imagem.png" alt="Foto da Joana Santos programando">
+            conversar?
+        </p>
+        <a href="https://instagram.com/rafaballerini" target="_blank">Instagram</a>
+        <a href="https://github.com/guilhermeonrails" target="_blank">GitHub</a>
+
+        <div >
+            <img src="imagem.png" alt="Foto da Joana Santos programando" >
+        </div>
     </main>
     <footer></footer>
 </body>
