--- a/Portifolio-HTML-e-CSS-aula_5/index.html
+++ b/Portifolio-HTML-e-CSS-aula_5/index.html
@@ -22,13 +22,14 @@
             colocarem em prática boas ideias. Vamos 
             conversar?
         </p>
-        <a href="https://instagram.com/rafaballerini" target="_blank">Instagram</a>
-        <a href="https://github.com/guilhermeonrails" target="_blank">GitHub</a>
 
         <div >
             <img src="imagem.png" alt="Foto da Joana Santos programando" >
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <a href="https://instagram.com/rafaballerini" target="_blank">Instagram</a>
+        <a href="https://github.com/guilhermeonrails" target="_blank">GitHub</a>
+    </footer>
 </body>
 </html>
